added some changes

--- a/src/html/absence.html
+++ b/src/html/absence.html
@@ -130,31 +130,31 @@
             <div class="cards">
                 <div class="lineVertical cardClassHeight"></div>
                 <a class="card Bg_White">
-                    <div>GUI1</div>
+                    <div>Mathématique</div>
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
                 <a class="card cardClassHeight Bg_White">
-                    <div>GUI1</div>
+                    <div>Français</div>
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
                 <a class="card Bg_White">
-                    <div>GUI1</div>
+                    <div>Anglais</div>
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
                 <a class="card Bg_White">
-                    <div>GUI1</div>
+                    <div>Physique</div>
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
                 <a class="card Bg_White">
-                    <div>GUI1</div>
+                    <div>SQL1</div>
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
-                <a class="card Bg_White">
+                <a class="card_blank Bg_White">
                     <div></div>
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
                 <a class="card Bg_White">
-                    <div>GUI1</div>
+                    <div>Science</div>
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
                 <a class="card Bg_White">
@@ -162,18 +162,18 @@
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
                 <a class="card Bg_White">
-                    <div>GUI1</div>
+                    <div>MAW1.1</div>
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
                 <a class="card Bg_White">
-                    <div>GUI1</div>
+                    <div>Science</div>
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
-                <a class="card Bg_White">
+                <a class="card_blank Bg_White">
                     <div></div>
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
-                <a class="card Bg_White">
+                <a class="card_blank Bg_White">
                     <div></div>
                 </a>
                 <div class="lineVertical cardClassHeight"></div>
@@ -183,50 +183,50 @@
             <div class="cards">
                 <div class="lineVertical cardMatiereHeight"></div>
                 <a class="card cardMatiereHeight" onclick="changeColorCards(this)">
-                    <div>GUI1</div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div>GUI1</div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div>GUI1</div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div>GUI1</div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div>GUI1</div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card Bg_White">
                     <div></div>
                 </a>
                 <div class="lineVertical cardMatiereHeight"></div>
                 <a class="card" onclick="changeColorCards(this)">
-                    <div>GUI1</div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div>GUI1</div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div>GUI1</div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div>GUI1</div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card Bg_White">
                     <div></div>
                 </a>
                 <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card Bg_White">
+                <a class="card" onclick="changeColorCards(this)">
+                    <div></div>
+                </a>
+                <div class="lineVertical cardMatiereHeight"></div>
+                <a class="card" onclick="changeColorCards(this)">
+                    <div></div>
+                </a>
+                <div class="lineVertical cardMatiereHeight"></div>
+                <a class="card" onclick="changeColorCards(this)">
+                    <div></div>
+                </a>
+                <div class="lineVertical cardMatiereHeight"></div>
+                <a class="card_blank Bg_White">
+                    <div></div>
+                </a>
+                <div class="lineVertical cardMatiereHeight"></div>
+                <a class="card" onclick="changeColorCards(this)">
+                    <div></div>
+                </a>
+                <div class="lineVertical cardMatiereHeight"></div>
+                <a class="card" onclick="changeColorCards(this)">
+                    <div></div>
+                </a>
+                <div class="lineVertical cardMatiereHeight"></div>
+                <a class="card" onclick="changeColorCards(this)">
+                    <div></div>
+                </a>
+                <div class="lineVertical cardMatiereHeight"></div>
+                <a class="card" onclick="changeColorCards(this)">
+                    <div></div>
+                </a>
+                <div class="lineVertical cardMatiereHeight"></div>
+                <a class="card_blank Bg_White">
+                    <div></div>
+                </a>
+                <div class="lineVertical cardMatiereHeight"></div>
+                <a class="card_blank Bg_White">
                     <div></div>
                 </a>
                 <div class="lineVertical cardMatiereHeight"></div>
