Repair view absence

--- a/src/html/absence.html
+++ b/src/html/absence.html
@@ -9,232 +9,232 @@
     <link rel="stylesheet" href="../css/absenceCss.css">
 </head>
 <body>
-    <header>
-        <div class="banner">
-            <a href="../index.html"><img id="logo" src="../ressource/cpnv.png"></a>
-        </div>
-    </header>
-    <div class="mobile">
-        <div class="title">
-            <div>Classe SI-T1A</div>
-            <div>Lundi 13 Septembre</div>
-        </div>
-        <br>
-        <div class="greenRectangle"></div>
-        <div class="centered">
-            <section class="cards">
-                <a id="eleve1" onclick="changeColor(this)" class="card">
-
-                    <img src="../ressource/mathieu_rabot.jpg">
-                    <div>Mathieu RABOT</div>
-                </a><!-- /card-one -->
-
-                <a id="eleve2" onclick="changeColor(this)" class="card">
-
-                    <img src="../ressource/mathieu_rabot.jpg">
-                    <div>Mathieu RABOT</div>
-                </a><!-- /card-one -->
-                <a id="eleve3" onclick="changeColor(this)" class="card">
-
-                    <img src="../ressource/mathieu_rabot.jpg">
-                    <div>Mathieu RABOT</div>
-                </a><!-- /card-one -->
-                <a id="eleve4" onclick="changeColor(this)" class="card">
-
-                    <img src="../ressource/mathieu_rabot.jpg">
-                    <div>Mathieu RABOT</div>
-                </a><!-- /card-one -->
-                <a id="eleve5" onclick="changeColor(this)" class="card">
-
-                    <img src="../ressource/mathieu_rabot.jpg">
-                    <div>Mathieu RABOT</div>
-                </a><!-- /card-one -->
-                <a id="eleve6" onclick="changeColor(this)" class="card">
-
-                    <img src="../ressource/mathieu_rabot.jpg">
-                    <div>Mathieu RABOT</div>
-                </a><!-- /card-one -->
-                <a id="eleve7" onclick="changeColor(this)" class="card">
-
-                    <img src="../ressource/mathieu_rabot.jpg">
-                    <div>Mathieu RABOT</div>
-                </a><!-- /card-one -->
-                <a id="eleve8" onclick="changeColor(this)" class="card">
-
-                    <img src="../ressource/mathieu_rabot.jpg">
-                    <div>Mathieu RABOT</div>
-                </a><!-- /card-one -->
-                <a id="eleve9" onclick="changeColor(this)" class="card">
-
-                    <img src="../ressource/mathieu_rabot.jpg">
-                    <div>Mathieu RABOT</div>
-                </a><!-- /card-one -->
-                <a onclick="changeColor(this)" class="card">
-
-                    <img src="../ressource/mathieu_rabot.jpg">
-                    <div>Mathieu RABOT</div>
-                </a><!-- /card-one -->
-            </section>
-        </div>
+<header>
+    <div class="banner">
+        <a href="../index.html"><img id="logo" src="../ressource/cpnv.png"></a>
     </div>
-    <div class="desktop">
-        <div class="title">
-            <div>Classe SI-T1A</div>
-            <div>Lundi 13 Septembre</div>
+</header>
+<div class="mobile">
+    <div class="title">
+        <div>Classe SI-T1A</div>
+        <div>Lundi 13 Septembre</div>
+    </div>
+    <br>
+    <div class="greenRectangle"></div>
+    <div class="centered">
+        <section class="cards">
+            <a id="eleve1" onclick="changeColor(this)" class="card">
 
-        </div>
-        <br>
-        <div class="greenRectangle"></div>
-        <div class="studentTitle">Mauro-Alexandre Costa-dos-Santos
-            <button class="smallButton" id="open">
-                Légendes et outils...
+                <img src="../ressource/mathieu_rabot.jpg">
+                <div>Mathieu RABOT</div>
+            </a><!-- /card-one -->
+
+            <a id="eleve2" onclick="changeColor(this)" class="card">
+
+                <img src="../ressource/mathieu_rabot.jpg">
+                <div>Mathieu RABOT</div>
+            </a><!-- /card-one -->
+            <a id="eleve3" onclick="changeColor(this)" class="card">
+
+                <img src="../ressource/mathieu_rabot.jpg">
+                <div>Mathieu RABOT</div>
+            </a><!-- /card-one -->
+            <a id="eleve4" onclick="changeColor(this)" class="card">
+
+                <img src="../ressource/mathieu_rabot.jpg">
+                <div>Mathieu RABOT</div>
+            </a><!-- /card-one -->
+            <a id="eleve5" onclick="changeColor(this)" class="card">
+
+                <img src="../ressource/mathieu_rabot.jpg">
+                <div>Mathieu RABOT</div>
+            </a><!-- /card-one -->
+            <a id="eleve6" onclick="changeColor(this)" class="card">
+
+                <img src="../ressource/mathieu_rabot.jpg">
+                <div>Mathieu RABOT</div>
+            </a><!-- /card-one -->
+            <a id="eleve7" onclick="changeColor(this)" class="card">
+
+                <img src="../ressource/mathieu_rabot.jpg">
+                <div>Mathieu RABOT</div>
+            </a><!-- /card-one -->
+            <a id="eleve8" onclick="changeColor(this)" class="card">
+
+                <img src="../ressource/mathieu_rabot.jpg">
+                <div>Mathieu RABOT</div>
+            </a><!-- /card-one -->
+            <a id="eleve9" onclick="changeColor(this)" class="card">
+
+                <img src="../ressource/mathieu_rabot.jpg">
+                <div>Mathieu RABOT</div>
+            </a><!-- /card-one -->
+            <a onclick="changeColor(this)" class="card">
+
+                <img src="../ressource/mathieu_rabot.jpg">
+                <div>Mathieu RABOT</div>
+            </a><!-- /card-one -->
+        </section>
+    </div>
+</div>
+<div class="desktop">
+    <div class="title">
+        <div>Classe SI-T1A</div>
+        <div>Lundi 13 Septembre</div>
+
+    </div>
+    <br>
+    <div class="greenRectangle"></div>
+    <div class="studentTitle">Mauro-Alexandre Costa-dos-Santos
+        <button class="smallButton" id="open">
+            Légendes et outils...
+        </button>
+    </div>
+    <div class="modal-container" id="modal-container">
+
+            <!-- Contenu de la fenêtre modale -->
+            <button class="Bg_Red bigButton" onclick="changeColorSelected(this)">
+                Abs. injustifiée
             </button>
-        </div>
+            <button class="Bg_LightPurple bigButton" onclick="changeColorSelected(this)">
+                Abs. j. hors délai
+            </button>
+            <button class="Bg_Blue bigButton" onclick="changeColorSelected(this)">
+                RDV / externe
+            </button>
+            <button class="Bg_Pink bigButton" onclick="changeColorSelected(this)">
+                Exclusion
+            </button>
+            <button class="Bg_DarkPink bigButton" onclick="changeColorSelected(this)">
+                Congé accordé
+            </button>
+            <button class="Bg_LightBlue bigButton" onclick="changeColorSelected(this)">
+                Appui / Retenue
+            </button>
+            <button class="Bg_Purple bigButton" onclick="changeColorSelected(this)">
+                Abs. justifiée
+            </button>
+            <button class="Bg_Yellow bigButton" onclick="changeColorSelected(this)">
+                Arrivée tardive
+            </button>
+            <button class="Bg_Brown bigButton" onclick="changeColorSelected(this)">
+                Devoir non fait
+            </button>
 
-        <div class="modal-container" id="modal-container">
-            <div class="modal">
-                <!-- Contenu de la fenêtre modale -->
-                <button class="Bg_Red bigButton" onclick="changeColorSelected(this)">
-                    Abs. injustifiée
-                </button>
-                <button class="Bg_LightPurple" onclick="changeColorSelected(this)">
-                    Abs. j. hors délai
-                </button>
-                <button class="Bg_Blue bigButton" onclick="changeColorSelected(this)">
-                    RDV / externe
-                </button>
-                <button class="Bg_Pink bigButton" onclick="changeColorSelected(this)">
-                    Exclusion
-                </button>
-                <button class="Bg_DarkPink bigButton" onclick="changeColorSelected(this)">
-                    Congé accordé
-                </button>
-                <button class="Bg_LightBlue bigButton" onclick="changeColorSelected(this)">
-                    Appui / Retenue
-                </button>
-                <button class="Bg_Purple bigButton" onclick="changeColorSelected(this)">
-                    Abs. justifiée
-                </button>
-                <button class="Bg_Yellow bigButton" onclick="changeColorSelected(this)">
-                    Arrivée tardive
-                </button>
-                <button class="Bg_Brown bigButton" onclick="changeColorSelected(this)">
-                    Devoir non fait
-                </button>
-            </div>
-        </div>
-
-
-        <div class="line"></div>
-        <div>
-            <div class="cards">
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card Bg_White">
-                    <div>Mathématique</div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card cardClassHeight Bg_White">
-                    <div>Français</div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card Bg_White">
-                    <div>Anglais</div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card Bg_White">
-                    <div>Physique</div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card Bg_White">
-                    <div>SQL1</div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card_blank Bg_White">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card Bg_White">
-                    <div>Science</div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card Bg_White">
-                    <div>GUI1</div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card Bg_White">
-                    <div>MAW1.1</div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card Bg_White">
-                    <div>Science</div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card_blank Bg_White">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-                <a class="card_blank Bg_White">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardClassHeight"></div>
-
-            </div>
-            <div class="line"></div>
-            <div class="cards">
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card cardMatiereHeight" onclick="changeColorCards(this)">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card_blank Bg_White">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card" onclick="changeColorCards(this)">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card_blank Bg_White">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-                <a class="card_blank Bg_White">
-                    <div></div>
-                </a>
-                <div class="lineVertical cardMatiereHeight"></div>
-            </div>
-
-        </div>
-        <div class="line"></div>
     </div>
+    <div class="line"></div>
+    <div class="cards">
+        <div class="card">
+            <a class="cardClassHeight Bg_White">
+                <div>Mathématique</div>
+            </a>
+            <a class="cardMatiereHeight" onclick="changeColorCards(this)">
+                <div></div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a class="cardClassHeight Bg_White">
+                <div>Français</div>
+            </a>
+            <a class="cardMatiereHeight" onclick="changeColorCards(this)">
+                <div></div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a class="cardClassHeight Bg_White">
+                <div>Anglais</div>
+            </a>
+            <a class="cardMatiereHeight" onclick="changeColorCards(this)">
+                <div></div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a class="cardClassHeight Bg_White">
+                <div>Physique</div>
+            </a>
+            <a class="cardMatiereHeight" onclick="changeColorCards(this)">
+                <div></div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a class="cardClassHeight Bg_White">
+                <div>SQL1</div>
+            </a>
+            <a class="cardMatiereHeight" onclick="changeColorCards(this)">
+                <div></div>
+            </a>
+        </div>
+
+        <div class="card_blank">
+            <a class="cardClassHeight Bg_White">
+                <div></div>
+            </a>
+            <a class="cardMatiereHeight Bg_White">
+                <div></div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a class="cardClassHeight Bg_White">
+                <div>Science</div>
+            </a>
+            <a class="cardMatiereHeight" onclick="changeColorCards(this)">
+                <div></div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a class="cardClassHeight Bg_White">
+                <div>GUI1</div>
+            </a>
+            <a class="cardMatiereHeight" onclick="changeColorCards(this)">
+                <div></div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a class="cardClassHeight Bg_White">
+                <div>MAW1.1</div>
+            </a>
+            <a class="cardMatiereHeight" onclick="changeColorCards(this)">
+                <div></div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a class="cardClassHeight Bg_White">
+                <div>Science</div>
+            </a>
+            <a class="cardMatiereHeight" onclick="changeColorCards(this)">
+                <div></div>
+            </a>
+        </div>
+
+        <div class="card_blank">
+            <a class="cardClassHeight Bg_White">
+                <div></div>
+            </a>
+            <a class="cardMatiereHeight Bg_White">
+                <div></div>
+            </a>
+        </div>
+
+        <div class="card_blank">
+            <a class="cardClassHeight Bg_White">
+                <div></div>
+            </a>
+            <a class="cardMatiereHeight Bg_White">
+                <div></div>
+            </a>
+        </div>
+    </div>
+    <div class="line"></div>
+    <div class="line"></div>
+</div>
 
 </body>
 <script src="../js/absence.js"></script>
